# document-knowledge-base

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  features.md  let-make-a-plan-velvety-puppy.md  plan.md
backend/: pyproject.toml
backend/app/: api.py  config.py  db.py  embedding.py  ingest.py  main.py  mcp_server.py  retrieval.py  schema.py  sparse.py  vectorstore.py
backend/app/extractors/: __init__.py  docling_extractor.py  text_extractor.py
backend/tests/: test_api.py  test_retrieval.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  fileLink.ts  styles.css
frontend/src/components/: FilesPanel.tsx  McpModal.tsx  ProjectPanel.tsx  SearchBar.tsx  SearchMain.tsx  Sidebar.tsx
implementation-plan/: step-2-ingestion.md  step-3-retrieval.md  step-4-api-mcp.md  step-5-frontend.md  step-6-packaging.md
samples/: notes.txt  sample.docx  sample.pptx  sample.xlsx  tokyo.md
